####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = end.xpm exit.xpm home.xpm next.xpm pagedown.xpm pageup.xpm prev.xpm hand.xpm enter.xpm 

install-data-local:
	$(mkinstalldirs) $(datadir)/qterm/cursor/
	$(INSTALL_DATA) $(srcdir)/end.xpm $(datadir)/qterm/cursor/end.xpm
	$(mkinstalldirs) $(datadir)/qterm/cursor/
	$(INSTALL_DATA) $(srcdir)/exit.xpm $(datadir)/qterm/cursor/exit.xpm
	$(mkinstalldirs) $(datadir)/qterm/cursor/
	$(INSTALL_DATA) $(srcdir)/home.xpm $(datadir)/qterm/cursor/home.xpm
	$(mkinstalldirs) $(datadir)/qterm/cursor/
	$(INSTALL_DATA) $(srcdir)/next.xpm $(datadir)/qterm/cursor/next.xpm
	$(mkinstalldirs) $(datadir)/qterm/cursor/
	$(INSTALL_DATA) $(srcdir)/pagedown.xpm $(datadir)/qterm/cursor/pagedown.xpm
	$(mkinstalldirs) $(datadir)/qterm/cursor/
	$(INSTALL_DATA) $(srcdir)/pageup.xpm $(datadir)/qterm/cursor/pageup.xpm
	$(mkinstalldirs) $(datadir)/qterm/cursor/
	$(INSTALL_DATA) $(srcdir)/prev.xpm $(datadir)/qterm/cursor/prev.xpm
	$(mkinstalldirs) $(datadir)/qterm/cursor/
	$(INSTALL_DATA) $(srcdir)/hand.xpm $(datadir)/qterm/cursor/hand.xpm
	$(mkinstalldirs) $(datadir)/qterm/cursor/
	$(INSTALL_DATA) $(srcdir)/enter.xpm $(datadir)/qterm/cursor/enter.xpm

uninstall-local:
	-rm -f $(datadir)/qterm/cursor/end.xpm
	-rm -f $(datadir)/qterm/cursor/exit.xpm
	-rm -f $(datadir)/qterm/cursor/home.xpm
	-rm -f $(datadir)/qterm/cursor/next.xpm
	-rm -f $(datadir)/qterm/cursor/pagedown.xpm
	-rm -f $(datadir)/qterm/cursor/pageup.xpm
	-rm -f $(datadir)/qterm/cursor/prev.xpm
	-rm -f $(datadir)/qterm/cursor/hand.xpm
	-rm -f $(datadir)/qterm/cursor/enter.xpm

####### kdevelop will overwrite this part!!! (end)############
