####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = end.xpm enter.xpm exit.xpm hand.xpm home.xpm next.xpm pagedown.xpm pageup.xpm prev.xpm 

install-data-local:
	$(mkinstalldirs) $(datadir)/cursor/
	$(INSTALL_DATA) $(srcdir)/end.xpm $(datadir)/cursor/end.xpm
	$(mkinstalldirs) $(datadir)/cursor/
	$(INSTALL_DATA) $(srcdir)/enter.xpm $(datadir)/cursor/enter.xpm
	$(mkinstalldirs) $(datadir)/cursor/
	$(INSTALL_DATA) $(srcdir)/exit.xpm $(datadir)/cursor/exit.xpm
	$(mkinstalldirs) $(datadir)/cursor/
	$(INSTALL_DATA) $(srcdir)/hand.xpm $(datadir)/cursor/hand.xpm
	$(mkinstalldirs) $(datadir)/cursor/
	$(INSTALL_DATA) $(srcdir)/home.xpm $(datadir)/cursor/home.xpm
	$(mkinstalldirs) $(datadir)/cursor/
	$(INSTALL_DATA) $(srcdir)/next.xpm $(datadir)/cursor/next.xpm
	$(mkinstalldirs) $(datadir)/cursor/
	$(INSTALL_DATA) $(srcdir)/pagedown.xpm $(datadir)/cursor/pagedown.xpm
	$(mkinstalldirs) $(datadir)/cursor/
	$(INSTALL_DATA) $(srcdir)/pageup.xpm $(datadir)/cursor/pageup.xpm
	$(mkinstalldirs) $(datadir)/cursor/
	$(INSTALL_DATA) $(srcdir)/prev.xpm $(datadir)/cursor/prev.xpm

uninstall-local:
	-rm -f $(datadir)/cursor/end.xpm
	-rm -f $(datadir)/cursor/enter.xpm
	-rm -f $(datadir)/cursor/exit.xpm
	-rm -f $(datadir)/cursor/hand.xpm
	-rm -f $(datadir)/cursor/home.xpm
	-rm -f $(datadir)/cursor/next.xpm
	-rm -f $(datadir)/cursor/pagedown.xpm
	-rm -f $(datadir)/cursor/pageup.xpm
	-rm -f $(datadir)/cursor/prev.xpm

####### kdevelop will overwrite this part!!! (end)############
