####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = addr.png anti-idle.png article.png auto-reply.png color-copy.png color.png connect.png copy.png disconnect.png fonts.png keys.png message.png mouse.png paste.png popwidget.png pref.png qterm_32x32.png qterm_48x48.png quick.png reconnect.png rect.png refresh.png sound.png tabpad.png 

install-data-local:
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/addr.png $(datadir)/pic/addr.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/anti-idle.png $(datadir)/pic/anti-idle.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/article.png $(datadir)/pic/article.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/auto-reply.png $(datadir)/pic/auto-reply.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/color-copy.png $(datadir)/pic/color-copy.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/color.png $(datadir)/pic/color.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/connect.png $(datadir)/pic/connect.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/copy.png $(datadir)/pic/copy.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/disconnect.png $(datadir)/pic/disconnect.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/fonts.png $(datadir)/pic/font.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/keys.png $(datadir)/pic/keys.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/message.png $(datadir)/pic/message.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/mouse.png $(datadir)/pic/mouse.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/paste.png $(datadir)/pic/paste.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/popwidget.png $(datadir)/pic/popwidget.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/pref.png $(datadir)/pic/pref.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/qterm_32x32.png $(datadir)/pic/qterm_32x32.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/qterm_48x48.png $(datadir)/pic/qterm_48x48.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/quick.png $(datadir)/pic/quick.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/reconnect.png $(datadir)/pic/reconnect.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/rect.png $(datadir)/pic/rect.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/refresh.png $(datadir)/pic/refresh.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/sound.png $(datadir)/pic/sound.png
	$(mkinstalldirs) $(datadir)/pic/
	$(INSTALL_DATA) $(srcdir)/tabpad.png $(datadir)/pic/tabpad.png

uninstall-local:
	-rm -f $(datadir)/pic/addr.png
	-rm -f $(datadir)/pic/anti-idle.png
	-rm -f $(datadir)/pic/article.png
	-rm -f $(datadir)/pic/auto-reply.png
	-rm -f $(datadir)/pic/color-copy.png
	-rm -f $(datadir)/pic/color.png
	-rm -f $(datadir)/pic/connect.png
	-rm -f $(datadir)/pic/copy.png
	-rm -f $(datadir)/pic/disconnect.png
	-rm -f $(datadir)/pic/font.png
	-rm -f $(datadir)/pic/keys.png
	-rm -f $(datadir)/pic/message.png
	-rm -f $(datadir)/pic/mouse.png
	-rm -f $(datadir)/pic/paste.png
	-rm -f $(datadir)/pic/popwidget.png
	-rm -f $(datadir)/pic/pref.png
	-rm -f $(datadir)/pic/qterm_32x32.png
	-rm -f $(datadir)/pic/qterm_48x48.png
	-rm -f $(datadir)/pic/quick.png
	-rm -f $(datadir)/pic/reconnect.png
	-rm -f $(datadir)/pic/rect.png
	-rm -f $(datadir)/pic/refresh.png
	-rm -f $(datadir)/pic/sound.png
	-rm -f $(datadir)/pic/tabpad.png

####### kdevelop will overwrite this part!!! (end)############
