####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = addr.png anti-idle.png article.png auto-reply.png color-copy.png color.png connect.png copy.png disconnect.png fonts.png keys.png message.png mouse.png paste.png popwidget.png pref.png qterm_32x32.png qterm_48x48.png quick.png reconnect.png rect.png refresh.png sound.png tabpad.png 

install-data-local:
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/addr.png $(datadir)/qterm/pic/addr.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/anti-idle.png $(datadir)/qterm/pic/anti-idle.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/article.png $(datadir)/qterm/pic/article.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/auto-reply.png $(datadir)/qterm/pic/auto-reply.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/color-copy.png $(datadir)/qterm/pic/color-copy.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/color.png $(datadir)/qterm/pic/color.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/connect.png $(datadir)/qterm/pic/connect.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/copy.png $(datadir)/qterm/pic/copy.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/disconnect.png $(datadir)/qterm/pic/disconnect.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/fonts.png $(datadir)/qterm/pic/font.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/keys.png $(datadir)/qterm/pic/keys.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/message.png $(datadir)/qterm/pic/message.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/mouse.png $(datadir)/qterm/pic/mouse.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/paste.png $(datadir)/qterm/pic/paste.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/popwidget.png $(datadir)/qterm/pic/popwidget.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/pref.png $(datadir)/qterm/pic/pref.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/qterm_32x32.png $(datadir)/qterm/pic/qterm_32x32.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/qterm_48x48.png $(datadir)/qterm/pic/qterm_48x48.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/quick.png $(datadir)/qterm/pic/quick.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/reconnect.png $(datadir)/qterm/pic/reconnect.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/rect.png $(datadir)/qterm/pic/rect.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/refresh.png $(datadir)/qterm/pic/refresh.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/sound.png $(datadir)/qterm/pic/sound.png
	$(mkinstalldirs) $(datadir)/qterm/pic/
	$(INSTALL_DATA) $(srcdir)/tabpad.png $(datadir)/qterm/pic/tabpad.png

uninstall-local:
	-rm -f $(datadir)/qterm/pic/addr.png
	-rm -f $(datadir)/qterm/pic/anti-idle.png
	-rm -f $(datadir)/qterm/pic/article.png
	-rm -f $(datadir)/qterm/pic/auto-reply.png
	-rm -f $(datadir)/qterm/pic/color-copy.png
	-rm -f $(datadir)/qterm/pic/color.png
	-rm -f $(datadir)/qterm/pic/connect.png
	-rm -f $(datadir)/qterm/pic/copy.png
	-rm -f $(datadir)/qterm/pic/disconnect.png
	-rm -f $(datadir)/qterm/pic/font.png
	-rm -f $(datadir)/qterm/pic/keys.png
	-rm -f $(datadir)/qterm/pic/message.png
	-rm -f $(datadir)/qterm/pic/mouse.png
	-rm -f $(datadir)/qterm/pic/paste.png
	-rm -f $(datadir)/qterm/pic/popwidget.png
	-rm -f $(datadir)/qterm/pic/pref.png
	-rm -f $(datadir)/qterm/pic/qterm_32x32.png
	-rm -f $(datadir)/qterm/pic/qterm_48x48.png
	-rm -f $(datadir)/qterm/pic/quick.png
	-rm -f $(datadir)/qterm/pic/reconnect.png
	-rm -f $(datadir)/qterm/pic/rect.png
	-rm -f $(datadir)/qterm/pic/refresh.png
	-rm -f $(datadir)/qterm/pic/sound.png
	-rm -f $(datadir)/qterm/pic/tabpad.png

####### kdevelop will overwrite this part!!! (end)############
